--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </ul>
         </div>
       </div>
-      <!-- course editor submenu -->
+      <!-- user management submenu -->
       <div id="user-management-submenu" class="col text-center border-end border-bottom py-1" style="display: none;">
         <button type="button" class="btn btn-outline-dark mx-0 btn-sm" data-bs-toggle="tooltip"
           data-bs-placement="bottom" title="commit changes [Ctrl+S]" onclick="hide_tooltips();">
@@ -254,8 +254,8 @@
         <textarea class="m-0 p-0 w-100" id="editor" style="width: 100%;"></textarea>
       </div>
 
-      <div id="course-management" class="col m-0 p-0 border-end" style="display:none;">
-        <span class="text-danger">UNIMPLEMENTED</span>
+      <div id="course-management" class="col m-0 p-0 border-end w-100" style="display:none;height: 100%;">
+        <textarea class="m-0 p-0 w-100" id="courseEditor" style="width: 100%;"></textarea>
       </div>
 
       <div id="user-management" class="col m-0 p-0 border-end w-100" style="display:none;height: 100%;">
