--- a/index.html
+++ b/index.html
@@ -68,29 +68,28 @@
             <a class="btn btn-dark text-primary" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="bottom"
               title='help' style="cursor:pointer;" href="https://app.f07-its.fh-koeln.de/docs/build/index.html"
               target="_blank">
-              <i class="fa-solid fa-question"></i>
+              <i class="fa-regular fa-circle-question h4"></i>
             </a>
           </li>
-
           <li class="nav-item">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </li>
           <li class="nav-item">
             <a id="tab-course-editor" class="nav-link active" data-bs-toggle="tooltip" data-bs-placement="bottom"
               title="edit document" style="cursor:pointer;" onclick="mathebuddyIDE.openTab('course-editor');">
-              <i class="fas fa-file-alt"></i>
+              <i class="fas fa-file-alt h5"></i>
             </a>
           </li>
           <li class="nav-item">
             <a id="tab-course-management" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom"
               title="course management" style="cursor:pointer;" onclick="mathebuddyIDE.openTab('course-management');">
-              <i class="fa-solid fa-share-nodes"></i>
+              <i class="fa-solid fa-sitemap h5"></i>
             </a>
           </li>
           <li class="nav-item">
             <a id="tab-user-management" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom"
               title="user management" style="cursor:pointer;" onclick="mathebuddyIDE.openTab('user-management');">
-              <i class="fas fa-user"></i>
+              <i class="fas fa-user h5"></i>
             </a>
           </li>
         </ul>
@@ -109,6 +108,30 @@
     <div class="row m-0 p-0">
       <!-- course editor submenu -->
       <div id="course-editor-submenu" class="col text-center border-end border-bottom py-1">
+
+        <span class="text-primary"><i class="fas fa-layer-group"></i></span>
+        <div class="dropdown" style="display:inline-block" data-bs-toggle="tooltip" data-bs-placement="top"
+          title="course selection">
+          <button class="btn btn-sm btn-primary dropdown-toggle" type="button" id="courselist_button"
+            data-bs-toggle="dropdown" onclick="hide_tooltips();">
+          </button>
+          <ul id="courselist_dropdown_items" class="dropdown-menu">
+          </ul>
+        </div>
+        &nbsp;&nbsp;&nbsp;
+        <span class="text-primary"><i class="fas fa-file"></i></span>
+        <div class="dropdown" style="display:inline-block" data-bs-toggle="tooltip" data-bs-placement="top"
+          title="document selection">
+          <button class="btn btn-sm btn-primary dropdown-toggle" type="button" id="filelist_button"
+            data-bs-toggle="dropdown" onclick="hide_tooltips();">
+          </button>
+          <ul id="filelist_dropdown_items" class="dropdown-menu">
+          </ul>
+        </div>
+
+        &nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;
+
         <span data-bs-toggle="modal" data-bs-target="#insertCodeModal">
           <button id="insertCodeButton" type="button" class="btn btn-outline-dark mx-0 btn-sm" data-bs-toggle="tooltip"
             data-bs-placement="bottom" title="insert template [F3]">
@@ -138,26 +161,41 @@
           data-bs-placement="bottom" title="save [Ctrl+S]" onclick="hide_tooltips();slwEditor.saveDocument();">
           <i class="fas fa-hdd"></i>
         </button>
+
         &nbsp;&nbsp;&nbsp;
-        <span class="text-primary"><i class="fas fa-layer-group"></i></span>
-        <div class="dropdown" style="display:inline-block" data-bs-toggle="tooltip" data-bs-placement="top"
-          title="course selection">
-          <button class="btn btn-sm btn-primary dropdown-toggle" type="button" id="courselist_button"
-            data-bs-toggle="dropdown" onclick="hide_tooltips();">
-          </button>
-          <ul id="courselist_dropdown_items" class="dropdown-menu">
-          </ul>
-        </div>
         &nbsp;&nbsp;&nbsp;
-        <span class="text-primary"><i class="fas fa-file"></i></span>
-        <div class="dropdown" style="display:inline-block" data-bs-toggle="tooltip" data-bs-placement="top"
-          title="document selection">
-          <button class="btn btn-sm btn-primary dropdown-toggle" type="button" id="filelist_button"
-            data-bs-toggle="dropdown" onclick="hide_tooltips();">
-          </button>
-          <ul id="filelist_dropdown_items" class="dropdown-menu">
-          </ul>
+
+        <button type="button" class="btn btn-outline-success mx-0 btn-sm" data-bs-toggle="tooltip"
+          data-bs-placement="bottom" title="fast update [F1]" onclick="hide_tooltips();slwEditor.updateEmulator(true);">
+          <i class="fa-solid fa-forward-fast"></i>
+        </button>
+        <button type="button" class="btn btn-outline-success mx-0 btn-sm" data-bs-toggle="tooltip"
+          data-bs-placement="bottom" title="full update [F2]"
+          onclick="hide_tooltips();slwEditor.updateEmulator(false);">
+          <i class="fa-solid fa-play"></i>
+        </button>
+
+        &nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;
+
+        <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+          <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+          <label class="btn btn-outline-primary btn-sm" for="btnradio1" data-bs-toggle="tooltip"
+            data-bs-placement="bottom" title="desktop preview" onclick="slwEditor.setDesktopMode();">
+            <i class="fa-solid fa-desktop"></i>
+          </label>
+          <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+          <label class="btn btn-outline-primary btn-sm" for="btnradio2" data-bs-toggle="tooltip"
+            data-bs-placement="bottom" title="mobile preview" onclick="slwEditor.setMobileMode();">
+            &nbsp;<i class="fa-solid fa-mobile-screen-button"></i>&nbsp;
+          </label>
+          <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+          <label class="btn btn-outline-primary btn-sm" for="btnradio3" data-bs-toggle="tooltip"
+            data-bs-placement="bottom" title="version management" onclick="">
+            &nbsp;<i class="fa-solid fa-code-compare"></i>&nbsp;
+          </label>
         </div>
+
       </div>
       <!-- user management submenu -->
       <div id="user-management-submenu" class="col text-center border-end border-bottom py-1" style="display: none;">
@@ -171,28 +209,7 @@
       </div>
       <!-- preview submenu -->
       <div id="preview-submenu" class="col text-center border-end border-bottom py-1" style="">
-        <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-          <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-          <label class="btn btn-outline-primary btn-sm" for="btnradio1" data-bs-toggle="tooltip"
-            data-bs-placement="bottom" title="desktop preview" onclick="slwEditor.setDesktopMode();">
-            <i class="fa-solid fa-desktop"></i>
-          </label>
-          <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-          <label class="btn btn-outline-primary btn-sm" for="btnradio2" data-bs-toggle="tooltip"
-            data-bs-placement="bottom" title="mobile preview" onclick="slwEditor.setMobileMode();">
-            &nbsp;<i class="fa-solid fa-mobile-screen-button"></i>&nbsp;
-          </label>
-        </div>
-        &nbsp;&nbsp;&nbsp;
-        <button type="button" class="btn btn-outline-success mx-0 btn-sm" data-bs-toggle="tooltip"
-          data-bs-placement="bottom" title="fast update [F1]" onclick="hide_tooltips();slwEditor.updateEmulator(true);">
-          <i class="fa-solid fa-forward-fast"></i>
-        </button>
-        <button type="button" class="btn btn-outline-success mx-0 btn-sm" data-bs-toggle="tooltip"
-          data-bs-placement="bottom" title="full update [F2]"
-          onclick="hide_tooltips();slwEditor.updateEmulator(false);">
-          <i class="fa-solid fa-play"></i>
-        </button>
+
         &nbsp;&nbsp;&nbsp;
         <button id="preview-spell-check" type="button" class="btn btn-outline-dark mx-0 btn-sm" data-bs-toggle="tooltip"
           data-bs-placement="bottom" title="spell check"
@@ -224,7 +241,7 @@
           onclick="hide_tooltips();slwEditor.toggleButton('preview-show-export');">
           <i class="fas fa-file-export"></i>
         </button>
-        &nbsp;&nbsp;&nbsp;
+        <!--&nbsp;&nbsp;&nbsp;
         <span class="text-danger"><i class="fa-solid fa-database"></i></span>
         <div class="dropdown" style="display:inline-block" data-bs-toggle="tooltip" data-bs-placement="bottom"
           title="server selection">
@@ -241,7 +258,7 @@
         <button type="button" class="btn btn-danger mx-0 btn-sm" data-bs-toggle="tooltip" data-bs-placement="bottom"
           title="visit selected server [F11]" onclick="hide_tooltips();slwEditor.visitServer();">
           <i class="fa-solid fa-arrow-up-right-from-square"></i>
-        </button>
+        </button>-->
       </div>
     </div>
   </div>
@@ -256,7 +273,8 @@
 
       <div id="course-management" class="col m-0 p-0 border-end w-100" style="display:none;height: 100%;">
         <h2 class="mx-1">Files</h2>
-        <table class="table table-striped">
+        <div id="course-management-table"></div>
+        <!--<table class="table table-striped">
           <thead>
             <tr>
               <th scope="col">Path</th>
@@ -266,7 +284,7 @@
               <th scope="col">Options</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="course-management-table-body">
             <tr>
               <td>hm1/intro</td>
               <td>1</td>
@@ -313,7 +331,7 @@
             </tr>
             <tr>
               <td>
-                <input type="text" id="exampleInputEmail1" style="width: 100%;">
+                <input type="text" id="" style="width: 100%;">
               </td>
               <td></td>
               <td></td>
@@ -326,12 +344,13 @@
               </td>
             </tr>
           </tbody>
-        </table>
+        </table>-->
       </div>
 
       <div id="user-management" class="col m-0 p-0 border-end w-100" style="display:none;height: 100%;">
         <h2 class="mx-1">Users</h2>
-        <table class="table table-striped">
+        <div id="user-management-table"></div>
+        <!--<table class="table table-striped">
           <thead>
             <tr>
               <th scope="col">Login</th>
@@ -367,10 +386,11 @@
               </td>
             </tr>
           </tbody>
-        </table>
+        </table>-->
         <br />
         <h2 class="mx-1">User Privileges</h2>
-        <table class="table table-striped">
+        <div id="user-privileges-table"></div>
+        <!--<table class="table table-striped">
           <thead>
             <tr>
               <th scope="col">Login</th>
@@ -428,8 +448,25 @@
                 </button>
               </td>
             </tr>
+            <tr>
+              <td>
+                <input type="text" id="" style="width: 100%;">
+              </td>
+              <td>
+                <input type="text" id="" style="width: 100%;">
+              </td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>
+                <button type="button" class="btn btn-outline-dark btn-sm" data-bs-toggle="tooltip"
+                  data-bs-placement="top" title="create">
+                  <i class="fa-solid fa-square-plus"></i>
+                </button>
+              </td>
+            </tr>
           </tbody>
-        </table>
+        </table>-->
       </div>
 
       <div class="col m-0 p-0 border-end" style="height: 100%; overflow-y: scroll; background-color: #505050;">
@@ -441,6 +478,8 @@
 
   <script>
     mathebuddyIDE.init();
+
+    mathebuddyIDE.showTooltips();
   </script>
 
 </body>
