--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,minimum-scale=1" />
 
-  <link href="/node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
-  <link rel="stylesheet" href="/node_modules/codemirror/lib/codemirror.css" />
+  <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
+  <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css" />
 
-  <script src="/build/mathebuddy-ide.min.js"></script>
+  <script src="build/mathebuddy-ide.min.js"></script>
 
   <title>mathe:buddy IDE</title>
 
@@ -125,7 +125,7 @@
       <div class="col m-0 p-0 text-end border-bottom text-secondary">
         <span class="lead fw-lighter" style="cursor: default">
           mathe:buddy IDE &nbsp;
-          <img src="/img/logo.svg" style="height: 32px" /> </span>&nbsp;&nbsp;&nbsp;&nbsp;
+          <img src="img/logo.svg" style="height: 32px" /> </span>&nbsp;&nbsp;&nbsp;&nbsp;
       </div>
     </div>
   </div>
